# quoll

./: .gitignore  README.md  pyproject.toml  quoll_env.yaml  setup.py
.github/workflows/: main.yml  python-publish.yml  python-unittest.yml
data/: 042.tif  042_notsquare.tif  L4_ts_03_sort.mrc.mdoc  L4_ts_03_sort.tlt  L4_ts_03_sort_bin8_1img.mrc  blobs.tif
examples/: oneimage_FRC.ipynb
quoll/frc/: oneimg.py
quoll/io/: mdoc_parser.py  reader.py  tiles.py
src/quoll/frc/: frc_calibration_functions.py  oneimg.py
src/quoll/io/: mdoc_parser.py  reader.py  tiles.py
src/quoll/ui/: frc_oneimg_ui.py
tests/: test_frc_oneimg.py  test_frc_oneimg_cli.py  test_frc_oneimg_cli_mock.py  test_imports.py  test_mdoc_parser.py  test_reader.py  test_tiles.py
