[build-system]
requires = ["setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "quoll"
version = "0.0.1"
dependencies = [
    "jpype1==0.7.5", #installed by miplib but no version specified
    "pims==0.4.1", #installed by miplib but no version specified
    "matplotlib",
    "mrcfile",
    "notebook",
    "numpy",
    "pandas",
    "scikit-image",
    "scipy",
    "tifffile",
    "miplib @ https://github.com/perdigao1/miplib/releases/download/windows/miplib-1.0.5-cp38-cp38-win_amd64.whl",

]
authors = [
    {name="Elaine Ho", email="elaine.ho@rfi.ac.uk"}
]
description = "Image quality assessment for electron tomography"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.6" #It may not work with python 3.8 or above
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[project.urls]
"Homepage" = "https://github.com/rosalindfranklininstitute/quoll"
"Bug Tracker" = "https://github.com/rosalindfranklininstitute/quoll/issues"

[project.scripts] 
oneimgfrc = "quoll.ui.frc_oneimg_ui:oneimgfrc"