[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quoll"
version = "0.0.3"
dependencies = [
    "matplotlib",
    "miplib @ git+https://github.com/elainehoml/miplib.git@frc_deps_only",
    "mrcfile",
    "notebook",
    "numpy",
    "pandas",
    "scikit-image",
    "scipy",
    "tifffile",
]
authors = [
    {name="Elaine Ho", email="elaine.ho@rfi.ac.uk"}
]
description = "Image quality assessment for electron tomography"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)

[project.urls]
"Homepage" = "https://github.com/rosalindfranklininstitute/quoll"
"Bug Tracker" = "https://github.com/rosalindfranklininstitute/quoll/issues"

[project.scripts] 
oneimgfrc = "quoll.ui.frc_oneimg_ui:oneimgfrc"
